--- a/app/src/main/res/layout/fragment_add_to_do.xml
+++ b/app/src/main/res/layout/fragment_add_to_do.xml
@@ -3,13 +3,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddToDo">
+    tools:context=".AddToDo"
+    android:background="#000">
 
     <!-- TODO: Update blank fragment layout -->
+    <LinearLayout
+        android:paddingTop="130dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"
-        android:textColor="#000" />
+
+        android:id="@+id/textView2"
+        android:layout_width="260dp"
+        android:layout_height="90dp"
+        android:textColor="#FFFF"
+        android:textSize="40dp"
+        android:text="hello world"
+        android:background="#e22323"
+        android:visibility="visible"/>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button" />
+    </LinearLayout>
 
 </FrameLayout>
