--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,5 +7,10 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="56dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:background="#00aafd"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp"
+        android:elevation="8dp"
+        />
 </LinearLayout>
