--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,9 +48,10 @@
 
     <LinearLayout
         android:id="@+id/newfrag"
-        android:layout_width="900dp"
-        android:layout_height="700dp"
-        android:orientation="horizontal">
+        android:layout_gravity=""
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
     </LinearLayout>
 
