--- a/app/src/main/res/layout/fragment_add_to_do.xml
+++ b/app/src/main/res/layout/fragment_add_to_do.xml
@@ -3,31 +3,68 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddToDo"
-    android:background="#000">
+    android:orientation="vertical"
+    tools:context=".AddToDo">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
-        android:paddingTop="130dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="?attr/colorPrimary"
+        android:orientation="vertical"
+        android:paddingBottom="35dp"
+        android:paddingTop="35dp">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="260dp"
-        android:layout_height="90dp"
-        android:textColor="#FFFF"
-        android:textSize="40dp"
-        android:text="hello world"
-        android:background="#e22323"
-        android:visibility="visible"/>
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:text="Title"
+            android:textColor="#FFFF"
+            android:textSize="25dp"
+            android:visibility="visible" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button" />
+        <EditText
+            android:id="@+id/editText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="25"
+            android:inputType="textPersonName"
+            android:paddingBottom="30dp"
+            android:paddingTop="20dp"
+            android:text="enter title"
+            android:textSize="20dp" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#FFFF"
+        android:orientation="vertical"
+        >
+
+        <Switch
+            android:id="@+id/switch1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:showText="true"
+            android:text="Remind me"
+            android:textOff="Remind Me"
+            android:textOn="Remind Me"
+            android:visibility="visible"
+            tools:checked="true" />
+
+
+
     </LinearLayout>
 
 </LinearLayout>
