--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -6,11 +6,28 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
-        android:layout_height="56dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:background="#00aafd"
         android:layout_marginTop="0dp"
         android:layout_marginBottom="0dp"
         android:elevation="8dp"
+        android:fontFamily="Roboto"
+        android:padding="10dp"
         />
+    <!--<Button-->
+        <!--android:id="@+id/button"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Done"-->
+        <!--/>-->
+    <ImageButton
+        android:id="@+id/doneImageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:elevation="8dp"
+        android:src="@android:drawable/stat_notify_sync_noanim" />
+
 </LinearLayout>
