--- a/app/src/main/res/layout/fragment_add_to_do.xml
+++ b/app/src/main/res/layout/fragment_add_to_do.xml
@@ -9,8 +9,8 @@
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?attr/colorPrimary"
+        android:layout_height="wrap_content"
+        android:background="#00AAFD"
         android:orientation="vertical"
         android:paddingBottom="35dp"
         android:paddingTop="35dp">
@@ -23,7 +23,8 @@
             android:text="Title"
             android:textColor="#FFFF"
             android:textSize="25dp"
-            android:visibility="visible" />
+            android:visibility="visible"
+            android:layout_marginTop="40dp"/>
 
         <EditText
             android:id="@+id/editText"
@@ -54,13 +55,11 @@
 
         <Switch
             android:id="@+id/switch1"
+            android:text="Remind Me"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:showText="true"
-            android:text="Remind me"
-            android:textOff="Remind Me"
-            android:textOn="Remind Me"
             android:visibility="visible"
+            android:padding="20dp"
             tools:checked="true" />
 
 
