--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_menu_add" />
+        app:srcCompat="@android:drawable/ic_menu_add"
+
+
+    />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -46,14 +49,6 @@
         <!--tools:layout_editor_absoluteX="8dp"-->
         <!--tools:layout_editor_absoluteY="8dp" />-->
 
-    <LinearLayout
-        android:id="@+id/newfrag"
-        android:layout_gravity=""
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-    </LinearLayout>
 
 
 </android.support.design.widget.CoordinatorLayout>
