--- a/app/src/main/res/layout/fragment_add_to_do.xml
+++ b/app/src/main/res/layout/fragment_add_to_do.xml
@@ -45,6 +45,7 @@
 
 
     </LinearLayout>
+    
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -60,8 +61,7 @@
             android:layout_height="wrap_content"
             android:visibility="visible"
             android:padding="20dp"
-            tools:checked="true" />
-
+            tools:checked="false" />
 
 
     </LinearLayout>
