--- a/app/src/main/res/layout/activity_to_do.xml
+++ b/app/src/main/res/layout/activity_to_do.xml
@@ -91,14 +91,15 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"/>
 
-                    <android.support.v7.widget.SwitchCompat
+                    <Switch
                         android:id="@+id/toDoHasDateSwitchCompat"
-                        android:layout_gravity="center"
-                        android:padding="8dp"
-                        android:gravity="center"
-                        android:layout_weight="1"
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:padding="8dp"
+                         />
 
                 </LinearLayout>
 
