Successfully converted JSON to Array

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -14,6 +14,7 @@
         android:elevation="8dp"
         android:fontFamily="Roboto"
         android:padding="10dp"
+        android:textColor="#000"
         />
     <!--<Button-->
         <!--android:id="@+id/button"-->
