--- a/app/src/main/res/layout/activity_to_do.xml
+++ b/app/src/main/res/layout/activity_to_do.xml
@@ -156,15 +156,15 @@
 
                     </LinearLayout>
 
-                    <TextView
-                        android:layout_weight="2"
-                        android:id="@+id/newToDoDateTimeReminderTextView"
-                        android:textSize="14sp"
-                        android:gravity="start"
-                        android:text="remind_date_and_time"
-                        android:textColor="#727272"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"/>
+                    <!--<TextView-->
+                        <!--android:layout_weight="2"-->
+                        <!--android:id="@+id/newToDoDateTimeReminderTextView"-->
+                        <!--android:textSize="14sp"-->
+                        <!--android:gravity="start"-->
+                        <!--android:text="remind_date_and_time"-->
+                        <!--android:textColor="#727272"-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="0dp"/>-->
 
                 </LinearLayout>
 
